--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.8,<4.0"
+requests = "^2.32.3"
+urllib3 = "^2.2.3"
+types-requests = "^2.32.0.20241016"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
