--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,9 @@ show_error_codes = "True"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
+markers = [
+    "integration: marks tests that interact with the real API"
+]
 
 [tool.ruff]
 target-version = "py39"
