--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,3 +108,6 @@ source = ["trivia_game"]
 [tool.ruff.per-file-ignores]
 "tests/*" = ["S101"]
 "tests/test_trivia_api.py" = ["SIM117", "S105"]
+
+[tool.deptry]
+ignore = ["DEP002"]
