--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,13 @@
 [tox]
 skipsdist = true
-envlist = py312, py313
+envlist = py38, py39, py310, py311
 
 [gh-actions]
 python =
-    3.12: py312
-    3.13: py313
+    3.8: py38
+    3.9: py39
+    3.10: py310
+    3.11: py311
 
 [testenv]
 passenv = PYTHON_VERSION
