--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,6 +108,7 @@ source = ["trivia_game"]
 [tool.ruff.per-file-ignores]
 "tests/*" = ["S101"]
 "tests/test_trivia_api.py" = ["SIM117", "S105"]
+"trivia_game/view/frames.py" = ["F821"]
 
 [tool.deptry]
 ignore = ["DEP002"]
