Add score tracking and difficulty-based scoring logic
Implemented score label creation and updating in quiz frames. Added difficulty multipliers and a scoring mechanism in `QuizBrain` for dynamic score calculations. Updated tests to cover new score-related functionality and ensured proper integration.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -111,6 +111,7 @@ source = ["trivia_game"]
 "tests/test_trivia_api.py" = ["SIM117", "S105"]
 "trivia_game/view/frames.py" = ["F821"]
 "tests/test_frames.py" = ["F841"]
+"tests/test_quiz_brain.py" = ["E712"]
 
 [tool.deptry]
 ignore = ["DEP002"]
