--- a/pyproject.toml
+++ b/pyproject.toml
@@ -111,7 +111,7 @@ source = ["trivia_game"]
 
 [tool.ruff.per-file-ignores]
 "tests/*" = ["S101"]
-"tests/test_trivia_api.py" = ["SIM117", "S105"]
+"tests/api/test_trivia_api.py" = ["SIM117", "S105"]
 "trivia_game/view/frames.py" = ["F821"]
 "tests/test_frames.py" = ["F841"]
 "tests/test_quiz_brain.py" = ["E712"]
