Refactor and relocate quiz brain tests
Moved and reorganized `test_quiz_brain.py` into a structured directory under `tests/core`, splitting tests into focused classes for better modularity. Added missing protocol tests, updated affected configurations, and cleaned up unnecessary code.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -114,7 +114,8 @@ source = ["trivia_game"]
 "tests/api/test_trivia_api.py" = ["SIM117", "S105"]
 "trivia_game/view/frames.py" = ["F821"]
 "tests/test_frames.py" = ["F841"]
-"tests/test_quiz_brain.py" = ["E712"]
+"tests/core/test_quiz_brain.py" = ["F841"]
+"tests/core/test_base_types.py" = ["C901"]
 
 [tool.deptry]
 ignore = ["DEP002"]
