Add GUI tests and restructure ignored Codecov paths
Added comprehensive tests for GUI-related frames, including quiz, menu, and settings components, ensuring proper widget creation and functionality. Renamed and moved `tests/in_progress/__init__.py` to `tests/gui/conftest.py` for better organization. Updated Codecov configuration to ignore `tests/gui` instead of `tests/in_progress`.

--- a/codecov.yaml
+++ b/codecov.yaml
@@ -3,7 +3,7 @@ coverage:
   round: down
   precision: 1
   ignore:
-    - "tests/in_progress/*"
+    - "tests/gui/*"
     - "tests/test_frames.py"
   status:
     project:
